--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "code-surfer": "^3.1.1",
     "mdx-deck": "^4.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^7.9.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier": "^2.1.1"
+  },
   "scripts": {
-    "start": "mdx-deck deck.mdx"
+    "start": "mdx-deck -h 0.0.0.0 deck.mdx"
   },
   "keywords": [],
   "author": "",
