--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prettier": "^2.1.1"
   },
   "scripts": {
+    "build": "mdx-deck build deck.mdx",
     "start": "mdx-deck -h 0.0.0.0 deck.mdx"
   },
   "keywords": [],
